--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Ejemplo GIT</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut vel impedit explicabo molestiae porro, maxime consectetur in. Deleniti eligendi recusandae architecto, quam alias perferendis adipisci iusto nobis natus illo consectetur!</p>
+    
 </body>
 </html>
