--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Ejemplo GIT</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut vel impedit explicabo molestiae porro, maxime consectetur in. Deleniti eligendi recusandae architecto, quam alias perferendis adipisci iusto nobis natus illo consectetur!</p>
-    
+    <a href="pagina2.html">Ir página 2</a>
 </body>
 </html>
